--- a/magtech dihub/css/styles.css
+++ b/magtech dihub/css/styles.css
@@ -36,6 +36,7 @@ body,
 html {
     width: 100%;
 	height: 100%;
+	overflow-x:hidden;
 }
 
 body, p {
@@ -476,7 +477,7 @@ a:hover {
 .header .h1-large {
 	margin-bottom: 2.25rem;
 	color: #ffffff;
-	font-size: 2.65rem;
+	font-size: 2rem;
 	line-height: 3.75rem;
 }
 
